# Slimeu

./: Cargo.toml
src/: events.rs  game.rs  main.rs
src/engine/: components.rs  input.rs  mod.rs  resize_strategy.rs
src/engine/physics/: event.rs  mod.rs  world.rs
src/engine/physics/collision/: mod.rs  shape.rs
src/engine/physics/object/: body.rs  builder.rs  mod.rs
src/gfx/: debug_info.rs  mod.rs
src/phx/: hitbox.rs  mod.rs  movement.rs
src/phx/collision/: collision_world.rs  detection.rs  hitbox.rs  mod.rs  resolution.rs
