[package]
name = "slimeu"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug-info = []

[dependencies]
# framework
quicksilver = {git = "https://github.com/ryanisaacg/quicksilver", rev = "8fdff10", features = ["stdweb"]}

# golem
golem = '0.1.3'

# logger
log = "0.4.8"

# engine/input dep
enum-map = "0.6.2"

#other
fxhash = "0.2.1"

slab = "0.4.2"
bitflags = "1.2.1"
petgraph = "0.5.1"

resphys = { path = "../resphys" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
legion = {git = "https://github.com/TomGillen/legion", rev = "e2c7363"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
legion = {git = "https://github.com/TomGillen/legion", rev = "e2c7363", default-features = false}





